[gd_scene load_steps=25 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0, 1, 1, 0, 1, 1, 1 )

[sub_resource type="InputEventAction" id=4]
action = "startstop"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=5]
action = "reset"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=19]
action = "loop"

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 19 )

[sub_resource type="InputEventAction" id=7]
action = "minus1"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "plus1"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "minus5"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventAction" id=13]
action = "plus5"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventAction" id=21]
action = "open"

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 21 )

[sub_resource type="InputEventAction" id=23]
action = "hide"

[sub_resource type="ShortCut" id=24]
shortcut = SubResource( 23 )

[sub_resource type="InputEventAction" id=15]
action = "smooth"

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[sub_resource type="InputEventAction" id=17]
action = "filter"

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
gradient = SubResource( 1 )
line_color = Color( 0.137255, 0.137255, 0.137255, 1 )
white_key_color = Color( 0.721569, 0.721569, 0.721569, 1 )
black_key_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startstop" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 36.0
disabled = true
toggle_mode = true
shortcut = SubResource( 3 )
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 112.0
margin_right = 144.0
margin_bottom = 132.0
disabled = true
shortcut = SubResource( 6 )
text = "reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loop" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 144.0
margin_right = 144.0
margin_bottom = 164.0
toggle_mode = true
shortcut = SubResource( 20 )
text = "looping off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus1" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 40, 10 )
disabled = true
shortcut = SubResource( 8 )
text = "-1 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus1" type="Button" parent="Control"]
margin_left = 88.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 40, 10 )
disabled = true
shortcut = SubResource( 10 )
text = "+1 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus5" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 80.0
margin_right = 72.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 40, 10 )
disabled = true
shortcut = SubResource( 12 )
text = "-5 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus5" type="Button" parent="Control"]
margin_left = 88.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 40, 10 )
disabled = true
shortcut = SubResource( 14 )
text = "+5 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBar" type="HScrollBar" parent="Control"]
anchor_right = 1.0
margin_left = 176.0
margin_top = 24.0
margin_right = -184.0
margin_bottom = 36.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color1" type="ColorPickerButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 48.0
margin_right = -88.0
margin_bottom = 68.0
color = Color( 1, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color2" type="ColorPickerButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 48.0
margin_right = -16.0
margin_bottom = 68.0
color = Color( 0, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 36.0
shortcut = SubResource( 22 )
text = "open file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 208.0
margin_right = -16.0
margin_bottom = 228.0
shortcut = SubResource( 24 )
text = "hide (h)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smooth" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 80.0
margin_right = -16.0
margin_bottom = 100.0
toggle_mode = true
pressed = true
shortcut = SubResource( 16 )
text = "smoothing on"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filter" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 112.0
margin_right = -16.0
margin_bottom = 132.0
toggle_mode = true
shortcut = SubResource( 18 )
text = "filtering off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Control"]
margin_right = 560.0
margin_bottom = 312.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.mp3", "*.ogg" )
current_dir = "/Godot Engine Projects/Frequency Analyzer"
current_path = "/Godot Engine Projects/Frequency Analyzer/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timestamp" type="Label" parent="Control"]
anchor_right = 1.0
margin_left = 800.0
margin_top = 48.0
margin_right = -184.0
margin_bottom = 62.0
text = "0:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min_dB" type="SpinBox" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 144.0
margin_right = -14.0
margin_bottom = 168.0
min_value = -80.0
max_value = -20.0
step = 0.1
value = -60.0
suffix = "dB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tilt" type="SpinBox" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 176.0
margin_right = -14.0
margin_bottom = 200.0
min_value = -40.0
max_value = 40.0
step = 0.1
suffix = "dB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min_dB_label" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 144.0
margin_right = -98.0
margin_bottom = 158.0
text = "clamp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tilt_label" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 176.0
margin_right = -98.0
margin_bottom = 190.0
text = "tilt"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Control/startstop" to="." method="_on_startstop_toggled"]
[connection signal="pressed" from="Control/reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="Control/loop" to="." method="_on_loop_toggled"]
[connection signal="pressed" from="Control/minus1" to="." method="_on_minus1_pressed"]
[connection signal="pressed" from="Control/plus1" to="." method="_on_plus1_pressed"]
[connection signal="pressed" from="Control/minus5" to="." method="_on_minus5_pressed"]
[connection signal="pressed" from="Control/plus5" to="." method="_on_plus5_pressed"]
[connection signal="scrolling" from="Control/TimeBar" to="." method="_on_TimeBar_scrolling"]
[connection signal="color_changed" from="Control/Color1" to="." method="_on_Color1_color_changed"]
[connection signal="color_changed" from="Control/Color2" to="." method="_on_Color2_color_changed"]
[connection signal="pressed" from="Control/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Control/hide" to="." method="_on_hide_pressed"]
[connection signal="toggled" from="Control/smooth" to="." method="_on_smooth_toggled"]
[connection signal="toggled" from="Control/filter" to="." method="_on_filter_toggled"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="mouse_exited" from="Control/min_dB" to="." method="_on_min_dB_mouse_exited"]
[connection signal="value_changed" from="Control/min_dB" to="." method="_on_min_dB_value_changed"]
[connection signal="mouse_exited" from="Control/tilt" to="." method="_on_tilt_mouse_exited"]
[connection signal="value_changed" from="Control/tilt" to="." method="_on_tilt_value_changed"]
